fix about page mobile link overflow

--- a/site/src/layouts/global.css
+++ b/site/src/layouts/global.css
@@ -171,6 +171,7 @@ dt {
 a {
   color: var(--primary);
   transition: color var(--fast);
+  overflow-wrap: break-word;
 }
 
 a:hover {
